--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "description": "TODO",
   "version": "0.0.1",
   "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build --legacy",
+    "dev": "run-p start:dev watch:css",
+    "build": "npm run build:css && sapper build --legacy",
+    "watch:css": "postcss static/global.css -o static/index.css -w",
+    "build:css": "NODE_ENV=production postcss static/global.css -o static/index.css",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build",
+    "start:dev": "sapper dev",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
     "test": "run-p --race dev cy:run"
