--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "gray-matter": "^4.0.2",
+    "marked": "^1.1.1",
     "polka": "next",
     "sirv": "^1.0.0"
   },
