--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build:css && sapper build --legacy",
     "watch:css": "postcss static/global.css -o static/index.css -w",
     "build:css": "NODE_ENV=production postcss static/global.css -o static/index.css",
-    "export": "sapper export --legacy",
+    "export": "npm run build && sapper export --legacy",
     "start": "node __sapper__/build",
     "start:dev": "sapper dev",
     "cy:run": "cypress run",
