--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,8 +4,10 @@
 
   publish_mode: editorial_workflow
   media_folder: static/uploads
-  media_library: static/uploads
   public_folder: /uploads
+  media_library:
+    config:
+      multiple: true
 
   collections:
     - name: "blog"
