--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,8 +6,7 @@
   media_folder: static/uploads
   public_folder: /uploads
   media_library:
-    config:
-      multiple: true
+    name: uploads
 
   collections:
     - name: "blog"
