--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,18 +1,18 @@
 {
 	"background_color": "#ffffff",
 	"theme_color": "#333333",
-	"name": "TODO",
-	"short_name": "TODO",
+	"name": "W1CH0_BLOG",
+	"short_name": "W1CH0",
 	"display": "minimal-ui",
 	"start_url": "/",
 	"icons": [
 		{
-			"src": "logo-192.png",
+			"src": "widerSolutions.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "logo-512.png",
+			"src": "wicho.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
