feat: Adding ts and adding ssr to home page
[PB-5] Adding ts

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,7 +9,7 @@
   collections:
     - name: "blog"
       label: "Blog"
-      folder: "static/posts"
+      folder: "static/content/posts"
       create: true
       fields:
         - { label: "Slug", name: "slug", widget: "string" }
