--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/express": "^4.17.8",
+    "@types/marked": "^1.1.0",
+    "@types/polka": "^0.5.1",
     "compression": "^1.7.1",
+    "express": "^4.17.1",
     "gray-matter": "^4.0.2",
     "marked": "^1.1.1",
     "polka": "next",
@@ -32,6 +37,7 @@
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
+    "@types/node": "^14.6.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
@@ -40,9 +46,11 @@
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^5.2.3",
     "rollup-plugin-terser": "^6.1.0",
+    "rollup-plugin-typescript2": "^0.27.2",
     "sapper": "^0.28.0",
     "svelte": "^3.17.3",
     "svelte-preprocess": "^4.1.1",
-    "tailwindcss": "^1.7.3"
+    "tailwindcss": "^1.7.3",
+    "typescript": "^4.0.2"
   }
 }
