--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -1,17 +1,26 @@
 ---
 new_page_extension: md
 auto_deploy: false
-admin_path: 
+admin_path: /gilgamesh
 webhook_url: 
 sections: 
-upload_dir: uploads
-public_path: "/uploads"
+  - type: directory
+    path: content/posts
+    label: Posts
+    create: documents
+    match: "**/*"
+    exclude: _index.md
+    new_doc_ext: md
+    template:
+    - blog
+upload_dir: assets
+public_path: https://w1ch0gilgamesh.s3.us-east-2.amazonaws.com/assets
 front_matter_path: ''
-use_front_matter_path: false
+use_front_matter_path: 
 file_template: ":filename:"
 build:
   install_dependencies_command: npm install
   preview_docker_image: forestryio/node:12
   mount_path: "/srv"
   working_dir: "/srv"
-  instant_preview_command: npm run develop
+  instant_preview_command: npm run dev
