--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -1,11 +1,11 @@
 ---
 new_page_extension: md
 auto_deploy: false
-admin_path: "/gilgamesh"
+admin_path: "static/admin"
 webhook_url: 
 sections:
 - type: directory
-  path: content/posts
+  path: static/content/posts
   label: Posts
   create: documents
   match: "**/*"
