--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { 
+    {
       "src": "package.json",
-      "use": "vercel-sapper",
-      "config": ["static"]
+      "use": "vercel-sapper"
     }
   ]
 }
