--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "@rollup/plugin-json": "^4.1.0",
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.8",
     "@types/marked": "^1.1.0",
