--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
   },
   "dependencies": {
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-typescript": "^5.0.2",
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.8",
     "@types/marked": "^1.1.0",
-    "@types/polka": "^0.5.1",
     "compression": "^1.7.1",
     "express": "^4.17.1",
     "gray-matter": "^4.0.2",
     "marked": "^1.1.1",
-    "polka": "next",
     "sirv": "^1.0.0",
     "svelte-icons": "^2.1.0"
   },
