--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
       "isolatedModules": true,
       "moduleResolution": "node",
       "sourceMap": true,
-      "strict": true,
       "types": [
           "svelte",
           "@sapper"
@@ -24,11 +23,11 @@
   },
   "include": [
       "src/**/*",
-      "src/node_modules/**/*",
-      "static/*"
+      "src/node_modules/**/*"
   ],
   "exclude": [
       "node_modules/*",
       "__sapper__/*",
+      "static/*"
   ],
 }
