feat: Adding author yml

--- a/.forestry/front_matter/templates/blog.yml
+++ b/.forestry/front_matter/templates/blog.yml
@@ -15,6 +15,12 @@ fields:
     required: true
   label: Title
   default: ''
+- name: minutes
+  type: text
+  config:
+    required: true
+  label: MinutesToRead
+  default: 3
 - name: date
   type: datetime
   description: ''
