fix: minor fixes to author paths

--- a/.forestry/front_matter/templates/author.yml
+++ b/.forestry/front_matter/templates/author.yml
@@ -20,7 +20,7 @@
       required: true
     template: social-media
     label: Social
-  - name: Profile-image
+  - name: profile-image
     type: file
     config:
       maxSize: 2
