--- a/.forestry/front_matter/templates/blog.yml
+++ b/.forestry/front_matter/templates/blog.yml
@@ -36,6 +36,18 @@ fields:
   config:
     maxSize: 2
   label: Featured Image
+- name: author
+  type: select
+  default: []
+  config:
+    required: true
+    options: []
+    source:
+      type: pages
+      section: authors
+      file: 
+      path: 
+  label: Author
 - name: seo
   type: include
   config: {}
