--- a/package.json
+++ b/package.json
@@ -1,56 +1,39 @@
 {
-  "name": "w1ch0_blog",
-  "description": "w1ch0_blog",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "run-p start:dev watch:css",
-    "build": "npm run build:css && sapper build --legacy",
-    "watch:css": "postcss static/global.css -o static/index.css -w",
-    "build:css": "NODE_ENV=production postcss static/global.css -o static/index.css",
-    "export": "npm run build && sapper export --legacy",
-    "start": "node __sapper__/build",
-    "start:dev": "sapper dev",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
-  },
-  "dependencies": {
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-typescript": "^5.0.2",
-    "@types/compression": "^1.7.0",
-    "@types/express": "^4.17.8",
-    "@types/marked": "^1.1.0",
-    "compression": "^1.7.1",
-    "express": "^4.17.1",
-    "gray-matter": "^4.0.2",
-    "marked": "^1.1.1",
-    "sirv": "^1.0.0",
-    "svelte-icons": "^2.1.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "@rollup/plugin-babel": "^5.0.0",
-    "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-replace": "^2.2.0",
-    "@types/node": "^14.6.3",
-    "npm-run-all": "^4.1.5",
-    "postcss-cli": "^7.1.1",
-    "postcss-import": "^12.0.1",
-    "postcss-load-config": "^2.1.0",
-    "postcss-nested": "^4.2.3",
-    "rollup": "^2.3.4",
-    "rollup-plugin-svelte": "^5.2.3",
-    "rollup-plugin-terser": "^6.1.0",
-    "rollup-plugin-typescript2": "^0.27.2",
-    "sapper": "^0.28.0",
-    "svelte": "^3.17.3",
-    "svelte-preprocess": "^4.1.1",
-    "tailwindcss": "^1.7.3",
-    "typescript": "^4.0.2"
-  }
+	"name": "wicho_personal_blog",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"preview": "svelte-kit preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --ignore-path .gitignore  --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@sveltejs/kit": "next",
+		"@tailwindcss/jit": "^0.1.18",
+		"@tailwindcss/typography": "^0.4.1",
+		"@typescript-eslint/eslint-plugin": "^4.19.0",
+		"@typescript-eslint/parser": "^4.19.0",
+		"autoprefixer": "^10.3.1",
+		"cssnano": "^5.0.7",
+		"eslint": "^7.22.0",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-svelte3": "^3.2.0",
+		"marked": "^2.1.3",
+		"postcss": "^8.3.6",
+		"prettier": "~2.2.1",
+		"prettier-plugin-svelte": "^2.2.0",
+		"svelte": "^3.34.0",
+		"svelte-check": "^2.0.0",
+		"svelte-preprocess": "^4.7.4",
+		"tailwindcss": "^2.2.7",
+		"tslib": "^2.0.0",
+		"typescript": "^4.0.0"
+	},
+	"type": "module",
+	"dependencies": {
+		"gray-matter": "^4.0.3"
+	}
 }
