--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"svelte": "^3.34.0",
 		"svelte-check": "^2.0.0",
 		"svelte-preprocess": "^4.7.4",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.0",
 		"tailwindcss": "^2.2.7",
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0"
