--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-vercel": "^1.0.0-next.27",
+		"@sveltejs/app-utils": "1.0.0-next.0",
 		"@sveltejs/kit": "next",
 		"@tailwindcss/jit": "^0.1.18",
 		"@tailwindcss/typography": "^0.4.1",
@@ -28,7 +30,6 @@
 		"svelte": "^3.34.0",
 		"svelte-check": "^2.0.0",
 		"svelte-preprocess": "^4.7.4",
-		"@sveltejs/adapter-vercel": "^1.0.0-next.0",
 		"tailwindcss": "^2.2.7",
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0"
