--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-vercel": "^1.0.0-next.27",
+		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/app-utils": "1.0.0-next.0",
 		"@sveltejs/kit": "next",
 		"@tailwindcss/jit": "^0.1.18",
