--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-netlify": "^1.0.0-next.29",
+		"@sveltejs/adapter-node": "^1.0.0-next.43",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/app-utils": "1.0.0-next.0",
 		"@sveltejs/kit": "next",
