--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-netlify": "^1.0.0-next.29",
-		"@sveltejs/adapter-node": "^1.0.0-next.43",
+		"@sveltejs/adapter-static": "next",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/app-utils": "1.0.0-next.0",
 		"@sveltejs/kit": "next",
@@ -25,7 +24,6 @@
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.2.0",
-		"gray-matter": "^4.0.3",
 		"marked": "^2.1.3",
 		"postcss": "^8.3.6",
 		"prettier": "~2.2.1",
@@ -38,5 +36,10 @@
 		"typescript": "^4.0.0"
 	},
 	"type": "module",
-	"dependencies": {}
+	"engines": {
+		"node": ">=14.17.4"
+	},
+	"dependencies": {
+		"gray-matter": "^4.0.3"
+	}
 }
